apps/pfx-ambulance-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: milung-ambulance-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /milung-api
      filters: 
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: milung-ambulance-webapi
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /openapi-ui
      filters:
      - type: URLRewrite
        urlRewrite:
          path: 
            type: ReplacePrefixMatch
            replacePrefixMatch: /openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: milung-openapi
          port: 80
